--- a/src/estilos.css
+++ b/src/estilos.css
@@ -116,3 +116,18 @@
     margin-top: 20px;
     margin-bottom: 20px;
 }
+
+footer{
+    height: 50px;
+    background-color: #426b1f;
+    padding: 20px;
+    text-align: center;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #FFFFFFFF;
+}
+
+footer > p > a{
+    margin-left: 5px;
+    color: #FFFFFFFF;
+}
